update the html file here

--- a/P3_Food_price_and_inflation/food_price_and_inflation.html
+++ b/P3_Food_price_and_inflation/food_price_and_inflation.html
@@ -92,7 +92,7 @@
         }
 
         .lable {
-            color: white;
+            color: black;
             width: 100px;
             text-align: right;
         }
@@ -523,7 +523,7 @@
                     document.getElementById("threeBox").style.display = "block"
                     document.getElementById("right-box").style.display = "none"
                     document.getElementById("introduce").innerHTML =
-                        "The trend in the inflation index is stable for most countries. The average of the EU is also stable, and the value fluctuates between 104 and 110, with an average value of 106.46. However, the three countries with an inflation index higher than 120, are Poland, Romania, and Latvia. Meanwhile, the inflations in these three countries have higher volatility patterns."
+                        "<p> <b> Click on any country in the map to view the food inflation index change from 2019 to 2020. </b><br> <br>The trend in the inflation index is stable for most countries. The EU overall has an average value of 106.46 and fluctuates between 104 and 110. Poland, Romania and Latvia are the only countires with an inflation index higher than 120. Meanwhile, the inflations in them also have higher volatility patterns.  </p> <hr>"
                     document.getElementById("legend1").style.display = "flex"
                     document.getElementById("introduceTitle").innerHTML = "Food Price Inflation Index in European Union"
 
