update html and css

--- a/P4_Food_environmental_costs/storymap_final.html
+++ b/P4_Food_environmental_costs/storymap_final.html
@@ -11,11 +11,11 @@
   <title>Environmental Cost of Food</title>
 
   <!-- CSS -->
-  <link href="/data/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/data/css/all.min.css" rel="stylesheet">
+  <link href="./data/css/bootstrap.min.css" rel="stylesheet">
+  <link href="./data/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-  <link href="/data/css/grayscale.css" rel="stylesheet">
+  <link href="./data/css/grayscale.css" rel="stylesheet">
 
   <style type="text/css">
   .img-fluid {
@@ -51,7 +51,7 @@
      <!-- Project One Row -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
             <div class="col-lg-6">
-              <img class="img-fluid" src="/data/pic/enviroment.png" alt="">
+              <img class="img-fluid" src="./data/pic/enviroment.png" alt="">
             </div>
             <div class="col-lg-6">
               <div class="bg-black text-center h-100 project">
@@ -69,7 +69,7 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="/data/pic/cattle.png" alt="">
+          <img class="img-fluid" src="./data/pic/cattle.png" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
@@ -93,7 +93,7 @@
   <!-- Food GHG Emission by supply chain -->
 
   <section id="buildings_age">
-	<iframe src="/data/p4_bar_chart.html" height="1300px" width="95%" frameBorder="0" scrolling="no"></iframe>
+	<iframe src="./data/p4_bar_chart.html" height="1300px" width="95%" frameBorder="0" scrolling="no"></iframe>
   </section>
   
 
@@ -103,7 +103,7 @@
 
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
             <div class="col-lg-6 my-auto">
-              <img class="img-fluid" src="/data/pic/emission.jpeg" alt="">
+              <img class="img-fluid" src="./data/pic/emission.jpeg" alt="">
             </div>
             <div class="col-lg-6">
               <div class="bg-black text-center h-100 project">
@@ -124,7 +124,7 @@
 
   <!-- Gloabl GHG Emission map --> 
   <section id="global_pop">
-	<iframe src="/data/swip_map_pink.html" height="550px" width="100%" frameBorder="0" scrolling="no"></iframe>
+	<iframe src="./data/swip_map_pink.html" height="550px" width="100%" frameBorder="0" scrolling="no"></iframe>
   </section>
 
   <!-- Projects/about Section -->
@@ -137,7 +137,7 @@
       <!-- <section id="global_pop"> -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
             <div class="col-lg-6 my-auto">
-              <img class="img-fluid" src="/data/pic/vegan.jpeg" alt="">
+              <img class="img-fluid" src="./data/pic/vegan.jpeg" alt="">
             </div>
             <div class="col-lg-6">
               <div class="bg-black text-center h-100 project">
@@ -156,7 +156,7 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6 my-auto">
-          <img class="img-fluid" src="/data/pic/avo.jpeg" alt="">
+          <img class="img-fluid" src="./data/pic/avo.jpeg" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
