change the body of html

--- a/P1_Food_origins/p1_food_origins.html
+++ b/P1_Food_origins/p1_food_origins.html
@@ -306,7 +306,7 @@
                 <button class="btn" onclick="filterSelection('Spice')"> Spice</button>
                 <button class="btn" onclick="filterSelection('Vegetable')"> Vegetable</button>
             </div>
-            <h5>1. By clicking the button above, you can select the crop category to explore.</h5>
+            <h5>1. By clicking the button above, you can select the crop category.</h5>
             <h5>2. Multiple crops can be selected and their origins can be displayed on the</h5>
             <h5> map at the same time.</h5>
             <h5>3. By clicking the “Clear All” icon, all existing layers will be removed.</h5>
