--- a/P4_Food_environmental_costs/data/swip_map_pink.html
+++ b/P4_Food_environmental_costs/data/swip_map_pink.html
@@ -146,7 +146,7 @@
             </td> </tr>
              <td>Zoom in to Countries by click on the name above to see the GHG comparison clearly.</td>
              </table>
-             <p class="credit">Emission data: <a href="https://stats.oecd.org/Index.aspx?DataSetCode=IO_GHG_2021">OECD</a>.</p>
+             <p class="credit">Emission data: <a href="https://stats.oecd.org/">OECD</a>.</p>
             </div>
     </div>
 
