--- a/P4_Food_environmental_costs/data/p4_bar_chart.html
+++ b/P4_Food_environmental_costs/data/p4_bar_chart.html
@@ -428,7 +428,7 @@
             kilograms of carbon dioxide equivalents (kgCO2eq), 
             categorised by production processes of the supply chain in different colours.</p> 
          <h3>Interactivity of chart:</h3>
-            <p>-Click on the color stack (chart/legend) to display the individual emission profiles. Click again to go back to full-section</p>
+            <p>-Click on the color stack (chart/legend) to display the individual emission profiles. Click the stack again to go back to full-section</p>
             <p>-Click the checkbox in the upper left corner to explore which production processes account 
                 for the most emissions for each food production (in %).</p>
 </div>
