p3 uk scale padding fix

--- a/P3_Food_price_and_inflation/food_price_and_inflation.html
+++ b/P3_Food_price_and_inflation/food_price_and_inflation.html
@@ -103,12 +103,13 @@
             right: 0px;
             z-index: 5;
             background: rgba(255, 255, 255, 0.7);
-            padding: 10px 20px;
+            padding: 15px 70px;
             width: 450px;
             border-radius: 5px;
             max-height: calc(100% - 20px);
             overflow: auto;
             display: none;
+            text-align: justify;
         }
 
         #legend1 {
