--- a/P0_Panoramic_and_Fullpage/fullpage_images/end_page.html
+++ b/P0_Panoramic_and_Fullpage/fullpage_images/end_page.html
@@ -1,30 +1,74 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body, html {
-  height: 100%;
-  margin: 0;
-}
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body,
+    html {
+      height: 100%;
+      margin: 0;
+    }
 
-.bg {
-  /* The image used */
-  background-image: url("end_page.jpg");
+    .bg {
+      /* The image used */
+      background-image: url("end_page.jpg");
 
-  /* Full height */
-  height: 100%; 
+      /* Full height */
+      height: 100%;
 
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-</style>
+      /* Center and scale the image nicely */
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    .ref {
+      bottom: 10%;
+      width: 10%;
+      z-index: 9999;
+
+
+    }
+
+    #console {
+      position: absolute;
+      margin: 0px;
+      width: 100%;
+      height: 7%;
+      bottom: 0%;
+      opacity: 0.7;
+      background-color: white;
+      padding-top: 0%;
+      padding-right: 20px;
+      padding-bottom: 0px;
+      padding-left: 40px;
+      z-index: 10;
+    }
+
+    h3 {
+
+      font: 12px/12px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    }
+  </style>
+  </style>
+
 </head>
+
 <body>
 
-<div class="bg"></div>
+  <div class="bg">
+  </div>
+  <div id="console">
+    <h3> <a href="reference list.pdf">Reference List</a></h3>
+    <h3>
+      <p> CASA0003 Group 7 Hangjing Cai, Haotian Meng, Jingran Ma, Liyuan Dong, Zicheng Fan <a
+          href="https://www.ucl.ac.uk/bartlett/casa/">Centre for Advanced Spatial Analysis, UCL</a> | <a
+          href="https://www.mapbox.com/about/maps/" target="_blank">© Mapbox</a> </p>
+    </h3>
+
+  </div>
 
 </body>
+
 </html>
